[package]
name = "paste"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "paste"
path = "src/main.rs"

[dependencies]

dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
envy = "0.4.2"
lazy_static = "1.4.0"
serde = { version = "1.0.132", features = ["derive"] }
ulid = "0.5.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
