[package]
name = "paste"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "paste"
path = "src/main.rs"

[dependencies]

dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
envy = "0.4.2"
mime = "0.3.16"
mpart-async = "0.6.0"
futures-util = "0.3.21"
lazy_static = "1.4.0"
tokio-stream = "0.1.8"
tokio-util = "0.7.1"
serde = { version = "1.0.136", features = ["derive"] }
nanoid = "0.4.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
